[gd_scene load_steps=2 format=3 uid="uid://c14gxuhmro3d5"]

[ext_resource type="Script" uid="uid://bdcprmc30kaw6" path="res://src/game/game_over.gd" id="1_m6r40"]

[node name="GameOver" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)
script = ExtResource("1_m6r40")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="GameOverText" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreText" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Final score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Try again"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
